traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: type mismatch;
 found   : Unit
 required: Boolean
    fin = verifFin(getDirection())
                  ^Snake:28: warning: enclosing method verifFin has result type Unit: return value discarded
  return fin
  ^